Fixes testing image during generating image workflow
 - Uses currently generated image.
 - Bump mongodb version to production setting to better replicate that scenario.

--- a/.github/test/docker-compose.yml
+++ b/.github/test/docker-compose.yml
@@ -5,18 +5,18 @@ services:
     restart: unless-stopped
 
   mongodb:
-    image: mongo:3.6.16
+    image: mongo:4.0.26
     command: mongod --smallfiles --nojournal --storageEngine wiredTiger
     restart: unless-stopped
 
   lms:
-    image: ghcr.io/eol-uchile/edx-platform:testing-koa
+    image: ghcr.io/eol-uchile/edx-platform:testing-current
     depends_on:
       - memcached
       - mongodb
   
   cms:
-    image: ghcr.io/eol-uchile/edx-platform:testing-koa
+    image: ghcr.io/eol-uchile/edx-platform:testing-current
     depends_on:
       - memcached
       - mongodb
