--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -84,6 +84,7 @@ jobs:
             --file .github/build/Dockerfile \
             --target testing \
             --build-arg EDX_PLATFORM_VERSION=${{ env.RELEASE-NAME }}.testing-${{ env.CODE }}-${{ env.TS }} \
+            --tag ghcr.io/eol-uchile/edx-platform:testing-current \
             --tag ghcr.io/eol-uchile/edx-platform:testing-${GITHUB_SHA} \
             --tag ghcr.io/eol-uchile/edx-platform:testing-${{ env.CODE }}-${{ env.RELEASE-NAME }}-${{ env.TS }} \
             --tag ghcr.io/eol-uchile/edx-platform:testing-${{ env.CODE }}-${{ env.RELEASE-NAME }} \
@@ -96,7 +97,7 @@ jobs:
           cd .github/test
           docker-compose run lms /openedx/edx-platform/.github/test/tests.sh
 
-      - name: Push image to the registry
+      - name: Push the image to the registry
         if: ${{ needs.variables.outputs.is-pr == 'false' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username ${{ github.actor }} --password-stdin
