--- a/requirements/edx/testing.in
+++ b/requirements/edx/testing.in
@@ -46,3 +46,4 @@ unidiff                   # Required by coverage_pytest_plugin
 pylint-pytest==0.3.0      # A Pylint plugin to suppress pytest-related false positives.
 pact-python               # Library for contract testing
 py                        # Needed for pytest configurations, was previously been fetched through tox
+requirements-parser         
