--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -64,7 +64,11 @@ jobs:
           sudo mkdir -p /data/db
           sudo chmod -R a+rw /data/db
           mongod &
-
+  
+      - name: setup dev for lxml dependency
+        run: |
+          sudo apt-get update && sudo apt-get install -y libxml2-dev libxslt-dev
+      
       - name: install requirements
         run: |
           sudo make test-requirements
