--- a/.github/workflows/upgrade-one-python-dependency.yml
+++ b/.github/workflows/upgrade-one-python-dependency.yml
@@ -41,6 +41,10 @@ jobs:
         with:
           python-version: "3.8"
 
+      - name: setup dev for lxml dependency
+        run: |
+            sudo apt-get update && sudo apt-get install -y libxml2-dev libxslt-dev
+      
       - name: Update any pinned dependencies
         env:
           NEW_VERSION: "${{ inputs.version }}"
