fix: Include script requirements in upgrade.
The `upgrade-one-python-dependency` workflow would fail if there were
changes in the scripts directory because they wouldn't get added to the
PR.  Update the list of `add-paths` for the workflow so that it doesn't
fail like this in the future.

--- a/.github/workflows/upgrade-one-python-dependency.yml
+++ b/.github/workflows/upgrade-one-python-dependency.yml
@@ -86,7 +86,9 @@ jobs:
         with:
           branch: "${{ github.triggering_actor }}/upgrade-${{ inputs.package }}"
           branch-suffix: short-commit-hash
-          add-paths: requirements
+          add-paths: |
+            requirements
+            scripts/**/requirements
           commit-message: |
             feat: Upgrade Python dependency ${{ inputs.package }}
 
