Workflow: fix is-prod variable definition and usage.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -117,5 +117,5 @@ jobs:
     with:
       code: ${{ needs.variables.outputs.code }}
       release-name: ${{ needs.variables.outputs.release-name }}
-      is-release: ${{ needs.variables.outputs.is-release }}
+      is-prod: ${{ needs.variables.outputs.is-prod }}
     secrets: inherit
