--- a/.github/workflows/migrations-check.yml
+++ b/.github/workflows/migrations-check.yml
@@ -14,12 +14,14 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
-        python-version: [ '3.8', '3.11' ]
+        python-version:
+          - '3.11'
         # 'pinned' is used to install the latest patch version of Django
         # within the global constraint i.e. Django==4.2.8 in current case
         # because we have global constraint of Django<4.2
         django-version: ["pinned"]
-        mongo-version: ["4", "7"]
+        mongo-version:
+          - "7"
         mysql-version: ["8"]
     services:
       mongo:
