--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -18,7 +18,8 @@ jobs:
     strategy:
       matrix:
         os: [ "ubuntu-20.04" ]
-        python-version: [ "3.8", '3.11' ]
+        python-version:
+          - '3.11'
 
     steps:
       - uses: actions/checkout@v3
