--- a/.github/workflows/static-assets-check.yml
+++ b/.github/workflows/static-assets-check.yml
@@ -13,10 +13,12 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-20.04 ]
-        python-version: [ '3.8', '3.11' ]
+        python-version:
+          - '3.11'
         node-version: [ 18 ]
         npm-version: [ 10.5.x ]
-        mongo-version: ["4.4", "7.0"]
+        mongo-version:
+          - "7.0"
 
     services:
       mongo:
