--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -14,6 +14,11 @@ jobs:
       - name: sync directory owner
         run: sudo chown runner:runner -R .*
 
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
