--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -98,7 +98,7 @@ jobs:
           docker-compose run lms /openedx/edx-platform/.github/test/tests.sh
 
       - name: Push the image to the registry
-        if: ${{ needs.variables.outputs.is-pr == 'false' }}
+        if: ${{ github.event_name == 'merge_group' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io --username ${{ github.actor }} --password-stdin
           docker push ghcr.io/eol-uchile/edx-platform:${{ steps.prefix.outputs.PREFIX }}${GITHUB_SHA}
@@ -112,7 +112,7 @@ jobs:
 
   webhook:
     needs: [ variables, build ]
-    if: ${{ needs.variables.outputs.is-pr == 'false' }}
+    if: ${{ github.event_name == 'merge_group' }}
     uses: ./.github/workflows/webhook.yml
     with:
       code: ${{ needs.variables.outputs.code }}
