--- a/requirements/edx/kernel.in
+++ b/requirements/edx/kernel.in
@@ -102,6 +102,7 @@ icalendar                           # .ics generator, used by calendar_sync
 ipaddress                           # Ip network support for Embargo feature
 jsonfield                           # Django model field for validated JSON; used in several apps
 laboratory                          # Library for testing that code refactors/infrastructure changes produce identical results
+importlib_metadata                  # Used to access entry_points in i18n_api plugin
 lxml                                # XML parser
 lti-consumer-xblock>=7.3.0
 mako                                # Primary template language used for server-side page rendering
