fix: update upload & download artifact actions

--- a/.github/actions/unit-tests/action.yml
+++ b/.github/actions/unit-tests/action.yml
@@ -27,8 +27,9 @@ runs:
 
     - name: save pytest warnings json file
       if: success()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: pytest-warnings-json
         path: |
           test_root/log/pytest_warnings*.json
+        overwrite: true
