--- a/.github/workflows/js-tests.yml
+++ b/.github/workflows/js-tests.yml
@@ -74,7 +74,7 @@ jobs:
         xvfb-run --auto-servernum ./scripts/all-tests.sh
 
     - name: Save Job Artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: Build-Artifacts
         path: |
@@ -82,3 +82,4 @@ jobs:
           test_root/log/*.png
           test_root/log/*.log
           **/TEST-*.xml
+        overwrite: true
