--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   collect-and-verify:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: [ edx-platform-runner ]
+    runs-on: ubuntu-20.04
     steps:
       - name: sync directory owner
         run: sudo chown runner:runner -R .*
@@ -19,9 +19,16 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Setup Python Virtual Environment
+        run: |
+          python3 -m venv .venv
+          . .venv/bin/activate
+          echo PATH=$PATH >> $GITHUB_ENV
+
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
+          . .venv/bin/activate
           sudo make test-requirements
 
       - name: verify unit tests count
