--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -56,8 +56,13 @@ jobs:
         #     mongo-version: "4.4"
 
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
+      - name: install system requirements
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install --yes \
+          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
+          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv \
+          && rm -rf /var/lib/apt/lists/*
 
       - name: install mongo version
         run: |
@@ -81,15 +86,8 @@ jobs:
       - name: checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Python Virtual Environment
-        run: |
-          python3 -m venv .venv
-          . .venv/bin/activate
-          echo PATH=$PATH >> $GITHUB_ENV
-
       - name: install requirements
         run: |
-          . .venv/bin/activate
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
@@ -134,8 +132,6 @@ jobs:
     runs-on: ubuntu-20.04
     needs: [ run-tests ]
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
       - uses: actions/checkout@v3
       - name: collect pytest warnings files
         uses: actions/download-artifact@v4
