--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -11,24 +11,22 @@ jobs:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
     runs-on: ubuntu-20.04
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
+      - name: install system requirements
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install --yes \
+          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
+          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv \
+          && rm -rf /var/lib/apt/lists/*
 
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      - name: Setup Python Virtual Environment
-        run: |
-          python3 -m venv .venv
-          . .venv/bin/activate
-          echo PATH=$PATH >> $GITHUB_ENV
-
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
-          . .venv/bin/activate
           sudo make test-requirements
 
       - name: verify unit tests count
