--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -62,7 +62,7 @@ jobs:
           sudo apt-get install --yes \
           build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
           libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv \
-          && rm -rf /var/lib/apt/lists/*
+          && sudo rm -rf /var/lib/apt/lists/*
 
       - name: install mongo version
         run: |
