--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -59,6 +59,7 @@ jobs:
       - name: install system requirements
         run: |
           sudo apt-get update && \
+          sudo apt remove 'python-*' -y && \
           sudo apt-get install --yes \
           build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
           libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv \
