--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -17,7 +17,7 @@ jobs:
           sudo apt remove 'python-*' -y && \
           sudo apt-get install --yes \
           build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
-          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv \
+          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-pip python3-venv \
           && sudo rm -rf /var/lib/apt/lists/*
 
       - name: Setup Python
