--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -20,8 +20,7 @@ jobs:
       - name: install requirements
         run: |
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints
-                              python-parted python-pexpect python3-pyasn1-modules
-                              python3-systemd -y
+                              python3-pyasn1-modules python3-systemd -y
           sudo make test-requirements
 
       - name: verify unit tests count
