--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -80,8 +80,9 @@ jobs:
 
       - name: install requirements
         run: |
-          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints
-                              python3-pyasn1-modules python3-systemd -y
+          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
+                              python3-parted python3-pexpect python3-pyasn1-modules \
+                              python3-systemd -y
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
