--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -19,8 +19,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
-          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints
-                              python3-pyasn1-modules python3-systemd -y
+          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
+                              python3-parted python3-pexpect python3-pyasn1-modules \
+                              python3-systemd -y
           sudo make test-requirements
 
       - name: verify unit tests count
