--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
                               python3-parted python3-pexpect python3-pyasn1-modules \
-                              python3-systemd -y
+                              python3-systemd ufw -y
           sudo make test-requirements
 
       - name: verify unit tests count
