fix: python pip issues

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -62,7 +62,7 @@ jobs:
           sudo apt-get -y autoremove && \
           sudo apt-get install software-properties-common && \
           sudo add-apt-repository ppa:deadsnakes/ppa -y && \
-          sudo apt-get install python3.11 python3.11-dev python3.11-distutils -y
+          sudo apt-get install python3.11 python3.11-dev python3.11-distutils python3-pip -y
 
       - name: install mongo version
         run: |
