--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -11,14 +11,6 @@ jobs:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
     runs-on: ubuntu-20.04
     steps:
-      - name: deleting python 3.8 & installing python 3.11
-        run: |
-          sudo apt-get -y purge python3.8 && \
-          sudo apt-get -y autoremove && \
-          sudo apt-get install software-properties-common && \
-          sudo add-apt-repository ppa:deadsnakes/ppa -y && \
-          sudo apt-get install python3.11 python3.11-dev python3.11-distutils python3-pip -y
-
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -27,6 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
+          sudo update-alternatives  --set python ${{ env.pythonLocation }}
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
                               python3-parted python3-pexpect python3-pyasn1-modules \
                               python3-systemd ufw -y
