--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
-          sudo update-alternatives --install /usr/bin/python python ${{ env.pythonLocation }}
+          sudo update-alternatives --install /usr/bin/python python ${{ env.pythonLocation }} 1
           sudo update-alternatives --config python
           sudo update-alternatives  --set python ${{ env.pythonLocation }}
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
