--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -19,9 +19,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
-          sudo update-alternatives --install /usr/bin/python python ${{ env.pythonLocation }} 1
-          sudo update-alternatives --config python
-          sudo update-alternatives  --set python ${{ env.pythonLocation }}
+          python -m venv env
+          source env/bin/activate
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
                               python3-parted python3-pexpect python3-pyasn1-modules \
                               python3-systemd ufw -y
