--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -80,12 +80,8 @@ jobs:
 
       - name: install requirements
         run: |
-          sudo update-alternatives --install /usr/bin/python python ${{ env.pythonLocation }} 1
-          sudo update-alternatives --config python
-          sudo update-alternatives  --set python ${{ env.pythonLocation }}
-          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
-                              python3-parted python3-pexpect python3-pyasn1-modules \
-                              python3-systemd ufw -y
+          python -m venv env
+          source env/bin/activate
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
