--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -56,6 +56,14 @@ jobs:
         #     mongo-version: "4.4"
 
     steps:
+      - name: install system requirements
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install --yes \
+          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
+          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv && \
+          sudo rm -rf /var/lib/apt/lists/*
+
       - name: install mongo version
         run: |
           if [[ "${{ matrix.mongo-version }}" != "4.4" ]]; then
@@ -80,8 +88,9 @@ jobs:
 
       - name: install requirements
         run: |
-          python -m venv env
-          source env/bin/activate
+          sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
+                              python3-parted python3-pexpect python3-pyasn1-modules \
+                              python3-systemd ufw -y
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
