--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -11,6 +11,14 @@ jobs:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
     runs-on: ubuntu-20.04
     steps:
+      - name: install system requirements
+        run: |
+          sudo apt-get update && \
+          sudo apt-get install --yes \
+          build-essential git language-pack-en libmysqlclient-dev libssl-dev libxml2-dev \
+          libxmlsec1-dev libxslt1-dev lynx xvfb pkg-config python3-dev python3-venv && \
+          sudo rm -rf /var/lib/apt/lists/*
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -19,8 +27,6 @@ jobs:
       - uses: actions/checkout@v2
       - name: install requirements
         run: |
-          python -m venv env
-          source env/bin/activate
           sudo apt-get remove python3-blinker python3-commandnotfound python3-entrypoints \
                               python3-parted python3-pexpect python3-pyasn1-modules \
                               python3-systemd ufw -y
