fix: install pip

--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           make ubuntu-requirements
 
+      - name: Install pip
+        run: python -m pip install -r requirements/pip.txt
+
       - name: install requirements
         run: |
           sudo make test-requirements
