--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -82,6 +82,9 @@ jobs:
           sudo chmod -R a+rw /data/db
           mongod &
 
+      - name: Install pip
+        run: python -m pip install -r requirements/pip.txt
+
       - name: install requirements
         run: |
           sudo make test-requirements
