--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -64,6 +64,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - run: |
+          python --version
+          pip --version
+
       - name: install system requirements
         run: |
           make ubuntu-requirements
