fix: version test

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -71,9 +71,11 @@ jobs:
       - name: install system requirements
         run: |
           make ubuntu-requirements
+          pip --version
 
       - name: install mongo version
         run: |
+          pip --version
           if [[ "${{ matrix.mongo-version }}" != "4.4" ]]; then
             wget -qO - https://www.mongodb.org/static/pgp/server-${{ matrix.mongo-version }}.asc | sudo apt-key add -
             echo "deb https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/${{ matrix.mongo-version }} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-${{ matrix.mongo-version }}.list
@@ -82,15 +84,14 @@ jobs:
 
       - name: start mongod server for tests
         run: |
+          pip --version
           sudo mkdir -p /data/db
           sudo chmod -R a+rw /data/db
           mongod &
 
-      - name: Install pip
-        run: python -m pip install -r requirements/pip.txt
-
       - name: install requirements
         run: |
+          pip --version
           sudo make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
             sudo pip install "django~=${{ matrix.django-version }}.0"
