--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -10,7 +10,7 @@ jobs:
   run-tests:
     name: ${{ matrix.shard_name }}(py=${{ matrix.python-version }},dj=${{ matrix.django-version }},mongo=${{ matrix.mongo-version }})
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: [ edx-platform-runner ]
+    runs-on: [ "ubuntu-20.04" ]
     strategy:
       matrix:
         python-version:
@@ -56,14 +56,16 @@ jobs:
         #     mongo-version: "4.4"
 
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
+      - name: checkout repo
+        uses: actions/checkout@v4
+
+      - name: install system requirements
+        run: |
+          make ubuntu-requirements
 
       - name: install mongo version
         run: |
           if [[ "${{ matrix.mongo-version }}" != "4.4" ]]; then
-            sudo apt-get purge -y "mongodb-org*"
-            sudo apt-get remove -y mongodb-org
             wget -qO - https://www.mongodb.org/static/pgp/server-${{ matrix.mongo-version }}.asc | sudo apt-key add -
             echo "deb https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/${{ matrix.mongo-version }} multiverse" | sudo tee /etc/apt/sources.list.d/mongodb-org-${{ matrix.mongo-version }}.list
             sudo apt-get update && sudo apt-get install -y mongodb-org="${{ matrix.mongo-version }}.*"
@@ -76,24 +78,21 @@ jobs:
           mongod &
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: checkout repo
-        uses: actions/checkout@v3
-
       - name: install requirements
         run: |
-          sudo make test-requirements
+          sudo env "PATH=$PATH" make test-requirements
           if [[ "${{ matrix.django-version }}" != "pinned" ]]; then
-            sudo pip install "django~=${{ matrix.django-version }}.0"
-            sudo pip check # fail if this test-reqs/Django combination is broken
+            sudo env "PATH=$PATH" pip install "django~=${{ matrix.django-version }}.0"
+            sudo env "PATH=$PATH" pip check # fail if this test-reqs/Django combination is broken
           fi
 
       - name: list installed package versions
         run: |
-          sudo pip freeze
+          sudo env "PATH=$PATH" pip freeze
 
       - name: Setup and run tests
         uses: ./.github/actions/unit-tests
@@ -103,10 +102,11 @@ jobs:
           mv reports/.coverage reports/${{ matrix.shard_name }}.coverage
 
       - name: Upload coverage
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: coverage
           path: reports/${{matrix.shard_name}}.coverage
+          overwrite: true
 
   # This job aggregates test results. It's the required check for branch protection.
   # https://github.com/marketplace/actions/alls-green#why
@@ -125,14 +125,12 @@ jobs:
           jobs: ${{ toJSON(needs) }}
 
   compile-warnings-report:
-    runs-on: [ edx-platform-runner ]
+    runs-on: [ "ubuntu-20.04" ]
     needs: [ run-tests ]
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: collect pytest warnings files
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: pytest-warnings-json
           path: test_root/log
@@ -146,11 +144,12 @@ jobs:
 
       - name: save warning report
         if: success()
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pytest-warning-report-html
           path: |
             reports/pytest_warnings/warning_report_all.html
+          overwrite: true
 
   # Combine and upload coverage reports.
   coverage:
@@ -162,15 +161,15 @@ jobs:
           - 3.11
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: coverage
           path: reports
@@ -184,4 +183,4 @@ jobs:
           coverage combine reports/*
           coverage report
           coverage xml
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
