--- a/.github/workflows/verify-gha-unit-tests-count.yml
+++ b/.github/workflows/verify-gha-unit-tests-count.yml
@@ -9,20 +9,21 @@ on:
 jobs:
   collect-and-verify:
     if: (github.repository == 'edx/edx-platform-private') || (github.repository == 'openedx/edx-platform' && (startsWith(github.base_ref, 'open-release') == false))
-    runs-on: [ edx-platform-runner ]
+    runs-on: [ "ubuntu-20.04" ]
     steps:
-      - name: sync directory owner
-        run: sudo chown runner:runner -R .*
-
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - uses: actions/checkout@v2
+      - name: install system requirements
+        run: |
+          make ubuntu-requirements
+
       - name: install requirements
         run: |
-          sudo make test-requirements
+          sudo env "PATH=$PATH" make test-requirements
 
       - name: verify unit tests count
         uses: ./.github/actions/verify-tests-count
