fix: lynx dependency

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -61,7 +61,7 @@ jobs:
 
       - name: install system requirements
         run: |
-          make ubuntu-requirements
+          sudo apt-get update && sudo apt-get install libmysqlclient-dev libxmlsec1-dev lynx
 
       - name: install mongo version
         run: |
